<package>
  <name>default_cfg_fkie</name>
  <description>
     A node which loads a given launch configuration and offers services to 
     list or start the contained nodes. It provides additional description 
     extracted from launch file. This is used by node_manager_fkie.
  </description>
  <version>0.2.2</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/default_cfg_fkie</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
