<?xml version="1.0"?>
<package format="3">
  <name>fkie_master_discovery</name>
  <!-- <replace>master_discovery_fkie</replace> -->
  <description>
     Discover the running ROS Masters in local network. The 
     discovering is done by sending an echo heartbeat messages to a defined 
     multicast group.
     The alternative is to use a zeroconf/avahi daemon to register the ROS 
     master as service and discover other ROS masters.
  </description>
  <version>1.3.2</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/master_discovery_fkie</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>fkie_multimaster_msgs</depend>
  <depend condition="$ROS_VERSION == 1">fkie_multimaster_pylib</depend>
  <depend condition="$ROS_VERSION == 1">std_srvs</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">rosgraph</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-avahi</depend>
  <depend condition="$ROS_VERSION == 1">avahi-daemon</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 3">python3-autobahn</depend>

  <depend condition="$ROS_VERSION == 2">lifecycle_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_lifecycle</depend>
  <depend condition="$ROS_VERSION == 2">rosidl_typesupport_fastrtps_cpp</depend>
  <depend condition="$ROS_VERSION == 2">rmw_dds_common</depend>
  <depend condition="$ROS_VERSION == 2">rmw_fastrtps_cpp</depend>
  <depend condition="$ROS_VERSION == 2">rmw_fastrtps_shared_cpp</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
