<package format="2">
  <name>fkie_multimaster</name>
  <replace>multimaster_fkie</replace>
  <description>
    The metapackage to combine the nodes required to establish and manage a multimaster network.
    This requires no or minimal configuration. The changes are automatically detected and synchronized.
  </description>
  <version>1.2.7</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/fkie_multimaster</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fkie_multimaster_msgs</exec_depend>
  <exec_depend>fkie_master_discovery</exec_depend>
  <exec_depend>fkie_master_sync</exec_depend>
  <exec_depend>fkie_node_manager</exec_depend>
  <exec_depend>fkie_node_manager_daemon</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
