<?xml version="1.0"?>
<package format="3">
  <name>fkie_multimaster_msgs</name>
  <replace>multimaster_msgs_fkie</replace>
  <description>
     The messages required by multimaster packages.
  </description>
  <version>1.2.7</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/multimaster_msgs_fkie</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-grpc-tools</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-grpc-tools</exec_depend> -->

</package>
