<?xml version="1.0"?>
<package format="3">
  <name>fkie_node_manager</name>
  <replace>node_manager_fkie</replace>
  <description>
     Graphical interface, written in PySide, to manage the running and 
     configured ROS nodes on different hosts. For discovering 
     the running ROS master master_discovery node will be used.
  </description>
  <version>1.2.7</version>
  <license>BSD, some icons are licensed under the GNU Lesser General Public License (LGPL) or Creative Commons Attribution-Noncommercial 3.0 License</license>
  <author>Alexander Tiderko</author>
  <author>Timo Roehling</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/node_manager_fkie</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
  <!-- <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend> -->
  <build_depend>fkie_master_discovery</build_depend>
  <build_depend>fkie_multimaster_msgs</build_depend>
  <build_depend>fkie_node_manager_daemon</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <exec_depend>fkie_master_discovery</exec_depend>
  <exec_depend>fkie_master_sync</exec_depend>
  <exec_depend>fkie_multimaster_msgs</exec_depend>
  <exec_depend>fkie_node_manager_daemon</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-docutils</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-paramiko</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pycryptodome</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-qt5-bindings-webkit</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-ruamel.yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-docutils</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-paramiko</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pycryptodome</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-qt5-bindings-webkit</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-ruamel.yaml</exec_depend>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>screen</exec_depend>
  <exec_depend>xterm</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
